Completed etch-a-sketch

--- a/etch-a-sketch.htm
+++ b/etch-a-sketch.htm
@@ -11,7 +11,7 @@
     <div id="container"></div>
 
     <div id="button">
-        <button id="Clear">Set The Canvas!</button>
+        <button id="Clear">Reset!</button>
     </div>
   
 </body>
